# sygc

./: .gitignore  CMakeLists.txt  README.md  config.sh  setup.sh
cmake/: sygc-config.cmake
exec/: LeNet.cpp  SYGC.cpp  SYGCPI.cpp  eval_SYGC.cpp  exec_common.h  millionaire.cpp  sequential_execution.h  sequential_execution_sh.h  unit_test.h  unit_test_sh.h
install_scripts/: install_emp-ot.sh  install_emp-tool.sh
sygc/: SYGC_config.h.in  cnn_layers.h  emp-ag2pc.h  fpre.h  program_interface.h  program_interface_sh.h  sequential_2pc.h  sequential_2pc_exec.h  sequential_2pc_exec_sh.h  sequential_2pc_sh.h
test/: test_SYGC.sh.in  testfiles.cmake
